--- a/style-rahela.css
+++ b/style-rahela.css
@@ -5,3 +5,10 @@
     margin-bottom: 16px;      
     text-align: center;
 }
+
+footer{ 
+    background-color: #fad1f8;
+    padding: 20px;
+    margin: 30px;
+    text-align: center;
+}
